Fix categories filter prob (z-index) & create a always-signed-in-user for development

--- a/src/assets/styles/cmps/stayFilterCategories.scss
+++ b/src/assets/styles/cmps/stayFilterCategories.scss
@@ -8,7 +8,6 @@
     padding-top: 25px;
     position: sticky;
     top: 80px;
-    z-index: 11;
     overflow: hidden;
 
     button {
